# parts

./: .gitignore  Cargo.toml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mbr.rs
src/: gpt.rs  lib.rs  mbr.rs  new.rs  new_gpt.rs  partitions.rs
src/gpt/: error.rs  header.rs  partition.rs
src/new/: gpt.rs  header.rs  mbr.rs  util.rs
tests/data/: README.md
